# MboaCaisse

./: .gitignore  AGENTS.md  FEATURES.md  README.md  SPEC.md  nuxt.config.ts  package.json  skills-lock.json
.agent/skills/bmad-agent-analyst/: customize.toml
.agent/skills/bmad-agent-architect/: customize.toml
.agent/skills/bmad-agent-ux-designer/: customize.toml
.agent/skills/bmad-brainstorming/: customize.toml
.agent/skills/bmad-dev-auto/: customize.toml
.ai-memory/: index.md
.claude/: settings.local.json
_bmad/: config.toml
_bmad-output/: project-context.md
_bmad-output/implementation-artifacts/: 1-1-structure-rust-layered-migrations-initiales.md  1-2-serveur-axum-embarque-mdns.md  1-3-authentification-register-login-jwt.md  1-4-fenetre-native-tray-mode-headless.md  1-5-1-wallet-domain-migration.md  1-5-2-api-wallet-identification-solde.md  1-5-3-migration-wallet-ledger.md  1-5-roles-permissions-middleware-guard-seed-admin.md  3-1-crud-produits-categories.md  3-2-cycle-de-vie-commande.md  3-3-payment-gate.md  3-4-encaissement-multi-moyen-credit-manuel.md  3-5-kitchen-display.md  deferred-work.md  epic-1-retrospective.md  review-acceptance-auditor-prompt.md  review-acceptance-auditor.md  review-blind-hunter-prompt.md  review-blind-hunter.md  review-edge-case-hunter-prompt.md  review-edge-case-hunter.md  sprint-status.yaml
_bmad-output/planning-artifacts/: epics.md  implementation-readiness-report-2026-07-22.md  prfaq-MboaCaisse.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
app/: app.config.ts
app/components/: OrderCardContent.vue
app/composables/: pages.ts  useAuth.ts
app/middleware/: admin.ts  auth.ts
app/modules/: tauri.ts
app/pages/: cuisine.vue  login.vue  register.vue  settings.vue
app/stores/: settings.ts
docs/: architecture-mboacaisse.md  systeme-de-licences.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: V1__users.sql  V2__wallet_ledger.sql  V3__products.sql  V4__orders.sql  V5__payments.sql  V6__payments_extras.sql
src-tauri/src/: lib.rs  mdns.rs  server.rs  settings.rs
src-tauri/src/api/: auth.rs  auth_middleware.rs  health.rs  kitchen.rs  mod.rs  orders.rs  payments.rs  products.rs  reports.rs  settings.rs  users.rs  wallet.rs
src-tauri/src/db/: migration_wallet.rs  migrations.rs  mod.rs  orders.rs  payments.rs  products.rs  seed.rs  users.rs  wallet_ledger.rs
src-tauri/src/domain/: crypto.rs  jwt.rs  mod.rs  order.rs  payment.rs  print_job.rs  product.rs  user.rs  wallet.rs
(+290 files in other folders)
