[package]
name = "mboacaisse"
version = "0.1.0"
description = "App interne de gestion bar/restaurant/épicerie — Tauri + SQLite"
authors = [ "STIFLEUR390" ]
license = "MIT"
repository = "https://github.com/STIFLEUR390/MboaCaisse"
edition = "2021"

[lib]
name = "nuxtor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.5.3"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.3.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
serde_json = "1"

[features]
default = ["desktop"]
desktop = ["tauri/tray-icon"]

[dependencies.tauri]
version = "2.9.5"
features = ["unstable"]

[dependencies.serde]
version = "1"
features = [ "derive" ]
