[package]
name = "mboacaisse"
version = "0.1.0"
description = "App interne de gestion bar/restaurant/épicerie — Tauri + SQLite"
authors = [ "STIFLEUR390" ]
license = "MIT"
repository = "https://github.com/STIFLEUR390/MboaCaisse"
edition = "2021"

[lib]
name = "nuxtor_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.5.3"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.3.4"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
serde_json = "1"

# Async runtime
# Flottant, lockfile gèle
tokio = { version = "1", features = ["full"] }

# HTTP server (Axum embarqué)
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "fs", "compression-gzip"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = { version = "0.25", features = ["bundled"] }
refinery = { version = "0.9", features = ["rusqlite-bundled"] }

# Auth (future story)
argon2 = "0.5"

# Network discovery (future story)
mdns-sd = "0.12"

# Telemetry
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# ID generation
uuid = { version = "1", features = ["v7", "serde"] }

# Date/time
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "10.4.0"
rand = { version = "0.10.2", features = ["sys_rng"] }
rand_core = { version = "0.6", features = ["getrandom"] }

[features]
default = ["desktop"]
desktop = ["tauri/tray-icon"]

[dependencies.tauri]
version = "2.9.5"
features = ["unstable"]

[dependencies.serde]
version = "1"
features = [ "derive" ]
